# barbaNS_chpl_cpp_perf_study

./: analyze_perf_data.py  collect_perf_data.py  perf.bash  test.bash
chpl_impls/: build.bash  nsStep7.chpl  nsStep8-9.chpl  surfPlot.chpl  surfPlot.py
cpp_impls/: CMakeLists.txt  build.bash  nsStep7.cpp  nsStep7.h  nsStep8-9.cpp  nsStep8-9.h  surfPlot.py  utils.cpp  utils.h
dat/: strong_1024_1024_16_nsStep7_chpl.txt  strong_1024_1024_16_nsStep7_cpp.txt  strong_1024_1024_16_nsStep89_chpl.txt  strong_1024_1024_16_nsStep89_cpp.txt  strong_1024_1024_24_nsStep7_chpl.txt  strong_1024_1024_24_nsStep7_cpp.txt  strong_1024_1024_24_nsStep89_chpl.txt  strong_1024_1024_24_nsStep89_cpp.txt  strong_1024_1024_2_nsStep7_chpl.txt  strong_1024_1024_2_nsStep7_cpp.txt  strong_1024_1024_2_nsStep89_chpl.txt  strong_1024_1024_2_nsStep89_cpp.txt  strong_1024_1024_32_nsStep7_chpl.txt  strong_1024_1024_32_nsStep7_cpp.txt  strong_1024_1024_32_nsStep89_chpl.txt  strong_1024_1024_32_nsStep89_cpp.txt  strong_1024_1024_4_nsStep7_chpl.txt  strong_1024_1024_4_nsStep7_cpp.txt  strong_1024_1024_4_nsStep89_chpl.txt  strong_1024_1024_4_nsStep89_cpp.txt  strong_1024_1024_8_nsStep7_chpl.txt  strong_1024_1024_8_nsStep7_cpp.txt  strong_1024_1024_8_nsStep89_chpl.txt  strong_1024_1024_8_nsStep89_cpp.txt  strong_128_2048_16_nsStep7_chpl.txt  strong_128_2048_16_nsStep7_cpp.txt  strong_128_2048_16_nsStep89_chpl.txt  strong_128_2048_16_nsStep89_cpp.txt  strong_128_2048_2_nsStep7_chpl.txt  strong_128_2048_2_nsStep7_cpp.txt  strong_128_2048_2_nsStep89_chpl.txt  strong_128_2048_2_nsStep89_cpp.txt  (+168 more)
